@@ -2,6 +2,8 @@ v4.1.6
  - Fixed issue with script failing on videos with no thumbnail
  - Added videos.json to store downloaded videos
  - Fixed subchannel Ignore not working
+ - Fixed some files being mistaken for channels when doing a episode count
+ - Better error handling & auto restart on partial failure
 
 v4.0.5
  - Fixed issue with script not handling site returning no videos
